[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "app"
version = "0.0.1"
authors = [
    { name = "Nisse Knudsen", email = "nisse@make87.com" },
]
dependencies = [
    "make87",
    "make87_messages",
    "pygame>=2.6.0,<3.0",
    "opencv-python-headless>=4.10,<5.0",
    "numpy",
]
description = "A Python app using Pygame to recreate the classic bouncing DVD logo, now with make87’s name. The logo bounces around the screen, changing color when it hits the edges."
readme = "README.md"
requires-python = ">=3.9,<3.13"
